Fixing visibility issues on button

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -88,7 +88,8 @@ label {
 
 
 .hiddenButton {
-    justify-content: center
+    justify-content: center;
+    visibility: visible;
 }
 
 /* Style the list */
